admin/css/admin_ng.css.less
/* StayNTouch | Admin LESS files */

/* 1. ROOT
==========================================================*/
@import "../stylesheets/less/common/01-A_reset.less";

@import "../stylesheets/less/common/01-B_variables.less";
@import "../stylesheets/less/admin/01-B_variables.less"; 

@import "../stylesheets/less/common/01-C_mixins.less"; 
@import "../stylesheets/less/common/01-D_mixins-animations.less"; 

/* 2. TYPOGRAPHY
==========================================================*/
@import "../stylesheets/less/common/02_typography.less"; 
@import "../stylesheets/less/admin/02_typography.less"; 

/* 3. GRAPHICAL ELEMENTS
==========================================================*/
@import "../stylesheets/less/common/03_graphics.less"; 
@import "../stylesheets/less/admin/03_graphics.less"; 

/* 4. LAYOUT
==========================================================*/
@import "../stylesheets/less/common/04_layout.less";
@import "../stylesheets/less/admin/04_layout.less";

/* 5. COMPONENTS
==========================================================*/
@import "../stylesheets/less/common/05-A_components.less";
@import "../stylesheets/less/admin/05-A_components.less";

@import "../stylesheets/less/common/05-B_forms.less";
@import "../stylesheets/less/admin/05-B_forms.less";

@import "../stylesheets/less/common/05-C_plugins.less";
@import "../stylesheets/less/admin/05-C_plugins.less"; 


/* 6. IE
==========================================================*/
/* 7. MEDIA QUERIES
==========================================================*/
/* 1024px                   ================*/
@media only screen and (max-width : 1024px) {
  @import "../stylesheets/less/admin/07-A_1024.less";
}

/* 1024px +                 ================*/
@media only screen and (min-width : 1025px) {
  @import "../stylesheets/less/admin/07-B_1024.less";
}



.form_add_new_rate{
  
  box-shadow: none;
}

.basedon_option_hidden{
  visibility: hidden;
}

.rate_roomtype_text, .assigned_room_text {
    text-transform: none;
}
.assigned_room_text{
color:#78D622 !important;   
}

.center_align{
  text-align:center;
}


.float_right{
  float:right;
  width:33%;

}

.rates_mover{
height: 271px;
}

.top_mover {
    padding-bottom: 38% !important;
    display:block;
}

.red_mover{

  background-position: 13px -1236px !important;
}
.green_mover{
  background-position: 13px -1187px !important;
}
.red_mover,.green_mover{
    background-image: url("/assets/admin/admin-icons.png");
    background-repeat: no-repeat;
    height:40px !important;

}
.red_gradient {
   
  background-color: #dd0500;
  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#e76e3a), to(#dd0500));
  background: -moz-linear-gradient(top, #e76e3a 0%, #dd0500 100%);
}
.green_gradient {
  background-color: #58d316;
  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#88d702), to(#58d316));
  background: -moz-linear-gradient(top, #88d702 0%, #58d316 100%);
}

.actions_margin_top{
  
  margin-top:20px;
}
.cursor_pointer{
  cursor:pointer;
}

.icons_rates {
    background-image: url("/assets/admin/admin-icons.png");
    background-repeat: no-repeat;
    border: 0 none;
    display: block;
}
.plus_small{
  background-position: 13px -346px !important;
}
.delete_small{
   background-position: 13px -542px !important;
}
.add_new_date_range_container{
  border:1px dashed #929292;
  height:54px; 
  padding-top:15px;

  span{
    color: #89BD55;
    display: inline-block;
    padding-left: 15px;
    width: 200px;
  }
  a{
    margin-left:40%;
  }
}
.rate_range_checkbox{
  float:left;
  width:60px;
  margin:5px;
  padding-top: 10px;
}
.date_range_checkbox_td{
  padding-left:60px;
}
.italic_text{
  font-style: italic;
}
.rate_step_title{
  font-size:16px !important;
}
/* ------------------date -picker ---------------------*/
.pickdate-cell-bg{
  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.05);
}
.pickdate-container-bg{
  background: url("/assets/date_container_bg.png");
}
.pickadate-header {
  position: relative;
}



.pickadate-main {
  margin: 0;
  padding: 0;
  width: 100%;
  text-align: center;
  font-size: 12px;
}

.pickadate a:visited, .pickadate a {
  color: #666666;
}

.pickadate-cell {
  overflow: hidden;
  margin: 0;
  padding: 0;
}

.pickadate-cell li {
  display: block;
  float: left;
  border-left: 2px solid #f1f1f1;
  border-right: 2px solid #f1f1f1;
  width: 14.285%;
  padding: 2.3%;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
    margin-bottom: 0.5em !important;

}

.pickadate-cell li:nth-child(7n+0) {
  border-right: 2px solid #f1f1f1;
}

.pickadate-cell li:nth-child(1),
.pickadate-cell li:nth-child(8),
.pickadate-cell li:nth-child(15),
.pickadate-cell li:nth-child(22),
.pickadate-cell li:nth-child(29),
.pickadate-cell li:nth-child(36) {
  border-left: 2px solid #f1f1f1;
}


.pickadate-cell .pickadate-disabled,
.pickadate-cell .pickadate-disabled a {
  color: #9D9D9D;
  font-size: 18px;
}


.pickadate-cell .pickadate-outofrange-disabled,
.pickadate-cell .pickadate-outofrange-disabled a,
.pickadate-cell .pickadate-disabled.pickadate-outofrange-disabled,
.pickadate-cell .pickadate-disabled.pickadate-outofrange-disabled a {

  
  color: transparent;
  cursor: default;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}

.pickadate-cell .pickadate-enabled {
  cursor: pointer;
  font-size: 18px;
  color: #000;
  font-weight:400;
}


.pickadate-cell .pickadate-active {
  color: #fff !important;
  background-color: #ffaa17;

}

.pickadate-cell .pickadate-active {
  color: #000;

}

.pickadate-cell .pickadate-head {
  color: #9D9D9D;
  line-height: 30px;
  text-align: center;
  font-size: 18px;
  font-weight: 600;
  text-transform: uppercase;
  border-top: 0px ;
  border-left: 0px !important;
  border-right: 0px !important;
}

.pickadate-centered-heading {
  text-transform: uppercase;
  color:#000;
  font-weight: normal;
  text-align: center;
  font-size: 1em;
  margin: 13px 0 13px 0;
}

.pickadate-controls {
  position: absolute;
  z-index: 10;
  width: 100%;
}

.pickadate-controls .pickadate-next {
  float: right;
}

.pickadate-controls a {
  text-decoration: none;
  font-size: 0.9em;
}

.pickadate-cell .pickadate-outofrange-disabled,
.pickadate-cell .pickadate-outofrange-disabled a,
.pickadate-cell .pickadate-disabled.pickadate-outofrange-disabled,
.pickadate-cell .pickadate-disabled.pickadate-outofrange-disabled a,
.pickadate-cell .pickadate-active.pickadate-outofrange-disabled,
.pickadate-cell .pickadate-active.pickadate-outofrange-disabled a {

  color: gray;
  color: transparent;

  cursor: default;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}
.date-picker-bg{
  
  background: url("/assets/texture.png") repeat scroll 0 0 #FCFCFC;
  padding:10px;
  margin:5px;
}
.date-picker-bg_right{
  width:48%;
  float:right;
}
.date-picker-bg_left{
  width:48%;
  float:left;
}

.pickadate_select{
  background: none repeat scroll 0 0 #ffffff !important;
  padding-right:14px;
  color:black;
  box-shadow:none !important;
  outline:0 !important;
}
.float_left{
  float:left;

}
.float_right{
  float:right;

}
.calendar_top_panel{
  background-color:white;
  height:46px;
}
.pickadate-prev,.pickadate-next{
  
  width:30px;
  padding:15px 5px !important;
}
.pickadate-body{
  margin-top:10px;

}
.date_picker_conatiner{
border-style: solid;
border-width: 1px 0;
border-color: #f1f1f1;
height: 410px;
}

.date_range_set_table{
  margin-bottom:0px;
  width:100%;
  tr,td{
    box-shadow: none !important;
  }
  tr{
    border-style: solid;
    border-width: 1px 0;
    border-color: #f1f1f1;
  }
}
.pickadate-cell .current-date{
  color: #66CCFF !important;
}

/*------------------date -picker ends here-------------------------- */

.form-rate-config {
    width:100%; 
    padding-left:0px; 
    padding-right:0px; 
    box-shadow:none !important;
}

.form-rate-config tr td {
    box-shadow:none !important;
    padding: 0 0;
}


.date-wrapper {
    text-transform:uppercase;
    list-style: none outside none;
    margin: 0px;
    padding: 0px;
}

.inactive {
    background:rgba(0,0,0,0.1);
    z-index: 999;
    font-color: #ccc;
}

.date-wrapper li {
    position: relative;
    display: inline-block;
    margin: 0px;
    vertical-align: middle;

    .icon-group {
        width:120px; 
        float:right;
    }
}

.overlay-disabled {
    height: 100%;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: 2000;
    background: none repeat scroll 0 0 #000000;
}


.rate-config{
    text-transform:uppercase;
    margin: 20px 0 0 20px;
    #ratetable td input{
        width: 155px;
    }
    #ratetable td.room-type{
        text-align:right !important;
    } 

}


.right-arrow-grey{
   background-position: 13px -797px;
   cursor: pointer;
}

.right-arrow-green{
   background-position: 13px -1349px;
   cursor: pointer;
   
}
.icon-calendar{
   background-position: 13px -1400px;
   cursor: pointer;
}
.icon-rate-fill{
   background-position: 13px -1451px;
   cursor: pointer;
}
.icon-rate-search{
   background-position: 13px -1501px;
   cursor: pointer;
}

.cursor-hand{
    cursor: pointer;
}

.item-disabled{
    opacity: 0.3;
}

